@@ -3,7 +3,7 @@
 # Distributed under the GNU Public License v2
 # $Header$
 
-VERSION="2.0.49-r17"
+VERSION="2.0.50_pre5"
 
 import sys,string,os,re,types,shlex,shutil,xpak,fcntl,signal
 import time,cPickle,atexit,grp,traceback,commands,pwd,cvstree,copy
@@ -1356,7 +1356,7 @@ def fetch(myuris, mysettings, listonly=0, fetchonly=0):
 		for x in mysettings["GENTOO_MIRRORS"].split():
 			if x:
 				if x[-1] == '/':
-					mymirrors += [x[1:]]
+					mymirrors += [x[:-1]]
 				else:
 					mymirrors += [x]
 	
@@ -3177,7 +3177,7 @@ def match_from_list(mydep,candidate_list):
 	else:
 		cat,pkg,ver,rev = mycpv_cps
 		if mydep == mycpv:
-			raise KeyError, "Specific key requires and operator (%s)" % (mydep)
+			raise KeyError, "Specific key requires an operator (%s)" % (mydep)
 
 	if ver and rev:
 		operator = get_operator(mydep)
@@ -4591,13 +4591,12 @@ class portdbapi(dbapi):
 			pgroups=groups[:]
 			match=0
 			for mykey in pkgdict:
+				dkey = catpkgsplit(dep_getcpv(mykey))
+				if not dkey:
+					writemsg("--- Invalid depend atom in package.keywords: %s\n" % mykey)
+					continue
 				if db["/"]["porttree"].dbapi.xmatch("bestmatch-list", mykey, None, None, [mycpv]):
-					dkey = catpkgsplit(dep_getcpv(mykey))
-					ckey = catpkgsplit(mycpv)
-					if not dkey:
-						writemsg("--- Invalid depend atom in package.keywords: %s\n" % mykey)
-					elif ckey and (dkey[:2] == ckey[:2]):
-						pgroups.extend(pkgdict[mykey])
+					pgroups.extend(pkgdict[mykey])
 			for gp in mygroups:
 				if gp=="*":
 					writemsg("--- WARNING: Package '%s' uses '*' keyword.\n" % mycpv)
